<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/breakfast" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/thumbnail"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/breakfast"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/day3_breakfast"
                    android:textColor="#666"
                    android:textSize="14dp"
                    android:id="@+id/textView31" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/snack" />

                <TextView
                    android:id="@+id/titles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/thumbnail1"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/snack"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titles"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/day4_snack"
                    android:textColor="#666"
                    android:textSize="14dp"
                    android:id="@+id/textViews32" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view1"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lunch" />

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/thumbnail2"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/lunch"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title1"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/day4_lunch"
                    android:textColor="#666"
                    android:textSize="14dp"
                    android:id="@+id/textViews33" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view2"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/thumbnail3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dinner" />

                <TextView
                    android:id="@+id/title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/thumbnail3"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/dinner"
                    android:textColor="#222"
                    android:textSize="22dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title3"
                    android:maxLines="3"
                    android:padding="8dp"
                    android:text="@string/day4_dinner"
                    android:textColor="#666"
                    android:textSize="14dp"
                    android:id="@+id/textViews34" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

</ScrollView>