<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.maplerad.fitnessapp.ProfileActivity">


    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/profile_details" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView37"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="135dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/name" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView40"
        android:layout_alignEnd="@+id/textView37"
        android:layout_alignRight="@+id/textView37"
        android:layout_marginEnd="71dp"
        android:layout_marginRight="71dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView38"
        android:layout_alignRight="@+id/textView38"
        android:layout_below="@+id/textView38"
        android:layout_marginTop="89dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/weight" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView40"
        android:layout_alignBottom="@+id/textView40"
        android:layout_alignLeft="@+id/textView39"
        android:layout_alignStart="@+id/textView39"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="TextView" />
</RelativeLayout>
